test/lit/vmi_new/vmi_layout_e2e_vcvt_all_dirs.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: pto-test-opt %s -vmi-lower-unified-to-legacy -vmi-layout-assignment -vmi-to-vpto 2>&1 | FileCheck %s

// E2E layout: vcvt fp widen + narrow + fptosi full pipeline.

module {
  func.func @vcvt_fp_widen_e2e(%a: !pto.vmi.vreg<128xf16>) -> !pto.vmi.vreg<128xf32> {
    %r = pto.vmi.vcvt %a : !pto.vmi.vreg<128xf16> -> !pto.vmi.vreg<128xf32>
    return %r : !pto.vmi.vreg<128xf32>
  }
  func.func @vcvt_fp_narrow_e2e(%a: !pto.vmi.vreg<128xf32>) -> !pto.vmi.vreg<128xf16> {
    %r = pto.vmi.vcvt %a : !pto.vmi.vreg<128xf32> -> !pto.vmi.vreg<128xf16>
    return %r : !pto.vmi.vreg<128xf16>
  }
  func.func @vcvt_fptosi_e2e(%a: !pto.vmi.vreg<64xf32>) -> !pto.vmi.vreg<64xi32> {
    %r = pto.vmi.vcvt %a : !pto.vmi.vreg<64xf32> -> !pto.vmi.vreg<64xi32>
    return %r : !pto.vmi.vreg<64xi32>
  }
}

// CHECK-NOT: pto.vmi.
// CHECK-NOT: !pto.vmi.
// CHECK-NOT: error:
